HFC-2695, HFC-3226, HFC-3392 - Updated Pie Chart labels algorithm HFC-3383 - Fixed Sparkline Control had extra spacing the the end of the chart [IE10]

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -353,9 +353,9 @@ $tab-border-color: $graphite03;
 $tab-hover-color: $font-color-extrahighcontrast;
 
 //Charts
-$chart-line-color: $graphite04;
-$chart-font-color: $graphite05;
-$chart-font-color-inverse: $graphite06;
+$chart-line-color: $graphite02;
+$chart-font-color: $graphite07;
+$chart-font-color-inverse: $graphite08;
 
 // DataGrid
 $datagrid-border-color: $graphite02;
